--- a/.hintrc
+++ b/.hintrc
@@ -3,19 +3,6 @@
     "development"
   ],
   "hints": {
-    "button-type": "off",
-    "axe/name-role-value": [
-      "default",
-      {
-        "button-name": "off"
-      }
-    ],
-    "axe/forms": [
-      "default",
-      {
-        "label": "off",
-        "select-name": "off"
-      }
-    ]
+    "axe/forms": "off"
   }
 }
